<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".shop_menu">

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_weight=".25"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="2dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible"
            app:fontFamily="sans-serif-condensed-medium" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_desc"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:padding="2dp"
            android:text="@string/shop"
            android:textColor="@color/colorRed"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/shop_card"
        android:layout_width="match_parent"
        android:layout_height="452dp"

        android:layout_weight=".5">


        <TextView
            android:id="@+id/textView"
            android:layout_width="264dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/choice_title"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.822"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/mcc"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/todo"
            android:onClick="mccButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mcc" />

        <ImageView
            android:id="@+id/shams"
            android:layout_width="140dp"
            android:layout_height="116dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:onClick="shamsButton"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toEndOf="@+id/mcc"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shams" />

        <ImageView
            android:id="@+id/dwatson"
            android:layout_width="139dp"
            android:layout_height="109dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:contentDescription="TODO"
            android:onClick="dwatsonButton"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/dwatson" />

        <ImageView
            android:id="@+id/metro"
            android:layout_width="140dp"
            android:layout_height="116dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:onClick="metroButton"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toEndOf="@+id/mcc"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/metro" />

        <ImageView
            android:id="@+id/shaheen"
            android:layout_width="139dp"
            android:layout_height="109dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="TODO"
            android:onClick="shaheenButton"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcc"
            app:srcCompat="@drawable/shaheen" />


        <TextView
            android:id="@+id/title_metro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/metro"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.618"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metro"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/title_mcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/mcc"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcc"
            app:layout_constraintVertical_bias="0.002" />

        <TextView
            android:id="@+id/title_shams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/shams"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shams"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/title_shaheen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/shaheen"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shaheen" />

        <TextView
            android:id="@+id/title_dwatson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dwatson"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dwatson" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight=".25"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="backButton"
            android:text="@string/back_button"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>