<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop"
    android:background="@drawable/gradient"
    android:layout_margin="0dp"
    android:padding="0dp">

<TextView
    android:id="@+id/textView4"
    android:layout_width="345dp"
    android:layout_height="59dp"
    android:layout_marginTop="8dp"
    android:gravity="center_vertical"
    android:text="@string/title"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textColor="@android:color/holo_red_dark"
    android:textSize="50sp"
    android:textStyle="bold"
    android:typeface="normal"
    android:visibility="visible"
    app:fontFamily="sans-serif-condensed-medium"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.493"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="217dp"
    android:layout_height="230dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_weight="1"
    android:contentDescription="@string/logo_desc"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.478"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4"
    app:srcCompat="@drawable/logo" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="194dp"
    android:layout_height="40dp"
    android:layout_marginTop="28dp"
    android:gravity="center_horizontal"
    android:text="@string/welcome"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/button"
    android:layout_width="226dp"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/colorRed"
    android:gravity="center|center_horizontal|center_vertical"
    android:onClick="openCage"
    android:text="@string/enter"
    android:textColor="@color/colorYellow"
    android:textColorHint="@color/colorRed"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.526"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2"
    app:layout_constraintVertical_bias="0.18" />

<TextView
    android:id="@+id/textBatteryLevel"
    android:layout_width="50dp"
    android:layout_height="22dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="116dp"
    android:layout_marginRight="116dp"
    android:layout_marginBottom="8dp"
    android:text="100%"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/textView8"
    app:layout_constraintTop_toBottomOf="@+id/button"
    app:layout_constraintVertical_bias="0.02" />

<TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="124dp"
    android:layout_marginLeft="124dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="Battery Level"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button"
    app:layout_constraintVertical_bias="0.128" />

<TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="124dp"
    android:layout_marginLeft="124dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="60dp"
    android:text="Pressure"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView8"
    app:layout_constraintVertical_bias="0.0" />

<TextView
    android:id="@+id/textPressure"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:text="10 C"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.015"
    app:layout_constraintStart_toEndOf="@+id/textView9"
    app:layout_constraintTop_toBottomOf="@+id/textBatteryLevel"
    app:layout_constraintVertical_bias="0.059" />

<TextView
    android:id="@+id/textView12"
    android:layout_width="45dp"
    android:layout_height="25dp"
    android:layout_marginStart="160dp"
    android:layout_marginLeft="160dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="Light"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView9"
    app:layout_constraintVertical_bias="0.066" />

<TextView
    android:id="@+id/textLight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="36dp"
    android:text="0 lx"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toEndOf="@+id/textView12"
    app:layout_constraintTop_toBottomOf="@+id/textPressure"
    app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>